# raytracer

./: .gitignore  Cargo.toml
src/: aabb.rs  bound.rs  bvh.rs  camera.rs  hittable.rs  hittablelist.rs  lib.rs  main.rs  math.rs  ray.rs  texture.rs  util.rs
src/material/: dielectric.rs  diffuselight.rs  lambertian.rs  metal.rs  mod.rs
src/primitives/: sphere.rs
