[package]
name = "raytracer"
version = "0.1.0"
authors = ["Jasper Chapman-Black <jasperchapmanblack@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = { version = "0.9", features = ["uv"] }
rand = "0.7.0"
rayon = "1.1"

[profile.dev]
opt-level = 3
